<resources>
    <string name="location"><u>Location</u></string>
    <string name="app_name">Host me</string>
    <string name="next">Next</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="what_is_your_gender">What is your gender ?</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="enter_your_mail_address">Enter your mail address</string>
    <string name="hello_you">Hello you</string>
    <string name="check_your_mail_box">Check your mail box</string>
    <string name="log_in">Log in !</string>
    <string name="host_me">HOST ME</string>
    <string name="username">E-Mail Address</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_field">Password</string>
    <string name="forgot_pwd">Forgot your password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terminate">Terminate</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_add">Add</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_messages">Messages</string>
    <string name="title_account">Account</string>
    <string name="log_out">LOG OUT</string>
    <string name="save">Save</string>
    <string name="my_account">My Account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last name</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="add_apt">create new listing</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string-array name="privacy_enum">
        <item>None</item>
        <item>Private</item>
        <item>Shared</item>
    </string-array>
    <string name="enter_name_hint">Building Name</string>
    <string name="enter_room_hint">#</string>
    <string name="enter_address_hint">Street Address #</string>
    <string name="enter_npa_hint">NPA</string>
    <string name="enter_city_hint">City</string>
    <string name="implied_location">, VD CH</string>
    <string name="chf_per_month">.-CHF/ month</string>
    <string name="chf_once">.-CHF</string>
    <string name="enter_area_hint">in m\u00B2</string>
    <string name="enter_beds_">beds</string>
    <string name="enter_proprietor_hint">Your Name/ Organization</string>
    <string name="enter_duration_hint">in months</string>
    <string name="upload_images">Upload Images</string>
    <string name="not_owner">You have no active listings</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="filters_text">Filters</string>
    <string name="change_file">Change file</string>
    <string name="type_message">Type a Message</string>
    <string name="agora_app_id">1e2e55c0fb1a47a6b39114a961df8573</string>
    <string name="agora_certificate">fd11cdf9c54d490c9756be9d087c5293</string>
    <string name="fcm_server_key">AAAAynpb0cU:APA91bE270JfYV-p1HuLo1nq-ENrwmk9ZZ0Qbj-D37jpVc9YGS2N-wWy-bYfmK12xOtsp5XmIiGgV1w7sxJxbeeS5TEDtrfHoztvH7F7pc7dyNwhr6sd-BXtUBWN9JqNtlXAfi1NSmHe</string>

    <string name="daily_route">Daily route</string>
    <string name="street_view">Street view</string>
    <string name="radius_gps">RADIUS (km):</string>
    <string name="pick_date">Pick date</string>
    <string name="residence_permit">Residence Permit</string>
    <string name="import_new_file">Import new File :</string>
    <string name="expiration_date">Expiration date:</string>
    <string name="none">None</string>
    <string name="download">Download :</string>
    <string name="wallet">Wallet</string>
    <string name="extract_from_the_execution_office">Extract From The Execution Office</string>
    <string name="salary_slips">Salary Slips</string>
</resources>